tests/cases/compiler-development/artifact/errors/diagnostic-imported-semantic-source-id.diagnostic
diagnostic error code=T0001 family=type message="unknown name 'missing_value'" sources=1 labels=1 notes=1 helps=1
  Source source_id=1 kind=file path="tests/cases/modules/errors/imported_semantic_error.ari" display="tests/cases/modules/errors/imported_semantic_error.ari" bytes=51
  Label index=0 role=primary source_id=1 source="tests/cases/modules/errors/imported_semantic_error.ari" line=2 column=10 end_line=2 end_column=23 byte_start=34 byte_end=47 message=""
  Snippet label=0 text="  --> tests/cases/modules/errors/imported_semantic_error.ari:2:10\n   |\n 2 |   return missing_value;\n   |          ^^^^^^^^^^^^^"
  Note index=0 location=none message="Ari resolves local bindings, parameters, functions, enum cases, constants, and imported items before expression lowering"
  Help index=0 location=none message="declare 'missing_value' before this use, import it with use, or qualify it with its module path"
